Fixing header margin on mobile portrait

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1595,6 +1595,16 @@ input, select, textarea {
 
 
 	}
+    /* Portrait */
+    @media only screen
+      and (min-device-width: 375px)
+      and (max-device-width: 736px)
+      and (orientation: portrait) {
+          /*Header phone portrait*/
+          body {
+  			padding: 0;
+  		}
+    }
 
 /* Main */
 
